# assignment-1

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  model.pkl  pyproject.toml  requirements.txt  workspace.yaml
data/: match_maker.xlsx
mlruns/0/: meta.yaml
mlruns/799660235965201500/: meta.yaml
mlruns/799660235965201500/0fc45cc2221b4ba284c3229b58a0d37b/: meta.yaml
mlruns/799660235965201500/0fc45cc2221b4ba284c3229b58a0d37b/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/799660235965201500/7f234eece45e4fd18768241760655e62/: meta.yaml
mlruns/799660235965201500/7f234eece45e4fd18768241760655e62/tags/: mlflow.runName  mlflow.source.name
models/: final_logistic_regression_model.joblib
src/: data_loading.py  main.py  models.py
src/dagster_project/: __init__.py  assets.py  pipeline.py  repository.py
src/dagster_project/tmpp588tqb7/history/: runs.db
src/dagster_project/tmpp588tqb7/history/runs/: index.db
src/dagster_project/tmpp588tqb7/schedules/: schedules.db
src/mlflow_project/: api.py
src/utils/: save_utils.py
