[project]
name = "ml-ops"
version = "0.1.0"
description = "ML Ops project with Dagster & MLFlow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-graphql",
    "dagster-pipes",
    "mlflow",
    "fastapi",
    "uvicorn",
    "pandas",
    "scikit-learn",
    "joblib",
    "alembic",
    "annotated-types",
    "antlr4-python3-runtime",
    "anyio",
    "backoff",
    "certifi",
    "charset-normalizer",
    "click",
    "coloredlogs",
    "contourpy",
    "cycler",
    "docstring_parser",
    "et_xmlfile",
    "filelock",
    "fonttools",
    "fsspec",
    "gql",
    "graphene",
    "graphql-core",
    "graphql-relay",
    "grpcio",
    "grpcio-health-checking",
    "h11",
    "httptools",
    "humanfriendly",
    "idna",
    "Jinja2",
    "joblib",
    "kiwisolver",
    "Mako",
    "markdown-it-py",
    "MarkupSafe",
    "matplotlib",
    "mdurl",
    "multidict",
    "numpy",
    "openpyxl",
    "packaging",
    "pandas",
    "pillow",
    "propcache",
    "protobuf",
    "pydantic",
    "pydantic_core",
    "Pygments",
    "pyparsing",
    "python-dateutil",
    "python-dotenv",
    "pytz",
    "PyYAML",
    "requests",
    "requests-toolbelt",
    "rich",
    "scikit-learn",
    "scipy",
    "setuptools",
    "six",
    "sniffio",
    "SQLAlchemy",
    "starlette",
    "structlog",
    "tabulate",
    "threadpoolctl",
    "tomli",
    "toposort",
    "tqdm",
    "typing_extensions",
    "tzdata",
    "universal_pathlib",
    "urllib3",
    "uvicorn",
    "watchdog",
    "watchfiles",
    "websockets",
    "wheel",
    "yarl",
    "pre-commit"
]
